--- a/build.gradle
+++ b/build.gradle
@@ -21,16 +21,17 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	//OpenAPI (Swagger)
-	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.5.0'
-
-	implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
-
-
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'org.postgresql:postgresql'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+}
 
+tasks.jar{
+    manifest {
+        attributes["Main-Class"] = "me.dio.avanade_estudos_dio.AvanadeEstudosDioApplication"
+    }
 }
 
 tasks.named('test') {
